--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="nav-links">
           <li><a href="#educ">Education</a></li>
           <li><a href="#exp">Work Experience</a></li>
-          <li><a href="#Skills">Skills</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#Project">Project</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
