--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#educ">Education</a></li>
           <li><a href="#exp">Work Experience</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="#Project">Project</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
