added aria and tab index

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header id="header">
-      <div class="logo">
+    <header aria-hidden="true" tabindex="-1">
+      <div class="logo" id="header">
         <a href="#header" id="logo">E.M.P.</a>
       </div>
 
@@ -32,7 +32,7 @@
     </header>
 
     <!-- main content -->
-    <main>
+    <main aria-hidden="true" tabindex="-1" role="main">  
       <button id="scrollToTopBtn" title="Go to top">↑</button>
 
       <section id="hero">
