--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
+    />
 
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
     <title>Emmanuel Peralta | Portfolio</title>
@@ -155,35 +158,79 @@
                 Here are some of the certificates I have earned during my
                 academic journey and participation in various contests.
               </p>
-
+              <hr />
+              <br />
+              <h3>College</h3>
               <div>
-                <h3>College</h3>
                 <img
-                  src="images/certificates/ITGENO Certificate of Completion.png"
-                  alt="ITGENO Certificate of Completion"
+                  src="images/cert/College-1stRunnerUpTagisanNgTalino.webp"
+                  alt="1stRunnerUpTagisanNgTalino"
                 />
                 <img
-                  src="images/certificates/ITGENO Certificate of Appreciation.png"
-                  alt="ITGENO Certificate of Appreciation"
+                  src="images/cert/College-2ndPlaceQuizBee.webp"
+                  alt="2ndPlaceQuizBee"
                 />
                 <img
-                  src="images/certificates/ITGENO Certificate of Participation.png"
-                  alt="ITGENO Certificate of Participation"
+                  src="images/cert/College-2ndPlaceQuizBee2.webp"
+                  alt="2ndPlaceQuizBee2"
                 />
                 <img
-                  src="images/certificates/Programming Wizard 2024.png"
-                  alt="Programming Wizard 2024"
+                  src="images/cert/College-ChampionCCSSProgWizard.webp"
+                  alt="ChampionCCSSProgWizard"
                 />
                 <img
-                  src="images/certificates/Dean's Lister 2021-2025.png"
-                  alt="Dean's Lister 2021-2025"
+                  src="images/cert/College-ChampionQuizzards.webp"
+                  alt="ChampionQuizzards"
+                />
+                <img
+                  src="images/cert/College-DeanLister.webp"
+                  alt="DeanLister1"
+                />
+                <img
+                  src="images/cert/College-DeanLister2.webp"
+                  alt="DeanLister2"
+                />
+                <img
+                  src="images/cert/College-DeanLister3.webp"
+                  alt="DeanLister3"
                 />
                 <br />
                 <br />
-                <h3>Secondary Education (SHS)</h3>
+              </div>
+
+              <hr />
+              <br />
+              <h3>Secondary Education (SHS)</h3>
+              <div>
                 <img
-                  src="images/certificates/Dean's Lister 2021-2025.png"
-                  alt="Dean's Lister 2021-2025"
+                  src="images/cert/SHS-11-Recognition2.webp"
+                  alt="SHS-11-Recognition2.webp"
+                />
+                <img
+                  src="images/cert/SHS-11-Regcognition.webp"
+                  alt="SHS-11-Recognition.webp"
+                />
+                <img
+                  src="images/cert/SHS-Top2-Grade11-2.webp"
+                  alt="SHS-11-SHS-Top2-Grade11-2.webp"
+                />
+                <img
+                  src="images/cert/SHS-Top2-Grade11.webp"
+                  alt="SHS-11-SHS-Top2-Grade11.webp"
+                />
+                <br />
+                <br />
+              </div>
+
+              <hr />
+              <br />
+              <h3>Other</h3>
+              <div>
+                <img src="images/cert/College - Webinar.webp" alt="Webinar" />
+                <img src="images/cert/SHS-11-SubRecog.webp" alt="SubRecog" />
+                <img
+                  src="images/cert/College-Volleyball.webp"
+                  alt="Volleyball"
                 />
               </div>
             </div>
@@ -238,6 +285,18 @@
               </li>
             </ul>
           </article>
+        </div>
+
+        <button class="button1" id="workCertBtn" popovertarget="workCert">
+          View Related Work Certificate
+        </button>
+
+        <div id="workCert" popover>
+          <h3>
+            On-the-Job Training(OJT) - Certificate of Completion (600 hours)
+          </h3>
+          <button id="closeWorkCertBtn" popovertarget="workCert">X</button>
+          <img src="images/cert/COC.webp" alt="Certificate of Completion" />
         </div>
       </section>
 
@@ -726,7 +785,7 @@
       </section>
 
       <!-- PDF Modal -->
-      <div id="pdfModal" class="modal">
+      <!-- <div id="pdfModal" class="modal">
         <span class="close">&times;</span>
         <iframe
           role="main"
@@ -737,6 +796,24 @@
           allowfullscreen
         ></iframe>
 
+        <div id="caption"></div>
+      </div> -->
+
+      <div id="pdfModal" class="modal">
+        <span class="close">&times;</span>
+
+        <div id="pdfPaginationControls">
+          <button id="prevPage">Prev</button>
+          <span
+            >Page <span id="currentPage">1</span> of
+            <span id="totalPages">1</span></span
+          >
+          <button id="nextPage">Next</button>
+          <br /><br />
+          <span id="zoomLevelspan">Zoom: <span id="zoomLevel">100%</span></span>
+        </div>
+
+        <canvas id="pdfCanvas" class="modal-content"></canvas>
         <div id="caption"></div>
       </div>
 
@@ -815,10 +892,13 @@
     <!-- scripts -->
 
     <script src="js/script.js"></script>
+    <script src="js/hamburger.js"></script>
     <script src="js/typewriter.js"></script>
     <script src="js/enlargeImage.js"></script>
     <script src="js/scrollToTop.js"></script>
     <script src="js/closeModalOnOutside.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 
     <!-- //scripts -->
   </body>
