--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           </articles>
 
           <articles class="cards 3">
-            <h3>Design</h3>
+            <h3>Design and Editing</h3>
 
             <div class="card-images">
               <div>
@@ -641,10 +641,13 @@
           </div>
         </div>
 
-        <h3 id="webDesDev">Websites Designed/Developed</h3>
+        <h3 id="webDesDev">Websites/Software Designed & Developed</h3>
         <div class="prj-cards-container">
           <article class="prj-cards 1">
-            <img src="images/projects/websites/itgeno.webp" alt="" />
+            <img
+              src="images/projects/websites/itgeno.webp"
+              alt="ITGENO website"
+            />
             <div class="card__content">
               <h3 class="card__title">ITGENO - Technologies Inc.</h3>
               <p class="card__description">
@@ -662,7 +665,10 @@
           </article>
 
           <article class="prj-cards 2">
-            <img src="images/projects/websites/wealthemporium.webp" alt="" />
+            <img
+              src="images/projects/websites/wealthemporium.webp"
+              alt="Wealth Emporium website"
+            />
             <div class="card__content">
               <h3 class="card__title">Wealth Emporium Ventures Inc.</h3>
               <p class="card__description">
@@ -681,7 +687,10 @@
           </article>
 
           <article class="prj-cards 3">
-            <img src="images/projects/websites/legacy.webp" alt="" />
+            <img
+              src="images/projects/websites/legacy.webp"
+              alt="legacy hsi website"
+            />
             <div class="card__content">
               <h3 class="card__title">Legacy HSI</h3>
               <p class="card__description">
@@ -700,7 +709,7 @@
           </article>
 
           <article class="prj-cards 4">
-            <img src="images/projects/websites/dffh.webp" alt="" />
+            <img src="images/projects/websites/dffh.webp" alt="dffh website" />
             <div class="card__content">
               <h3 class="card__title">DFFH Frachising</h3>
               <p class="card__description">
@@ -727,15 +736,16 @@
               draggable="false"
             />
             <div class="card__content">
-              <h3 class="card__title">College Capstone Project: HomeHaven</h3>
+              <h3 class="card__title">Capstone Project: HomeHaven</h3>
               <p class="card__description">
-                A real-estate management system that allows users to search,
-                filter, message, and schedule an appointment. It features a
-                user-friendly interface, and a comprehensive admin dashboard for
-                property management.
+                My 4th year college project, a real-estate management system
+                that allows users to search, filter, message, and schedule an
+                appointment. It features a user-friendly interface, and a
+                comprehensive admin dashboard for property management. Also have
+                a responsive layout design for different devices.
               </p>
               <a href="#webDesDev" class="button1" class="webDesign"
-                >View Design</a
+                >View Project Blueprint</a
               >
             </div>
           </article>
@@ -756,7 +766,7 @@
                 design with easy navigation and responsive layout.
               </p>
               <a href="#webDesDev" class="button1" class="webDesign"
-                >View Design</a
+                >View Project Blueprint</a
               >
             </div>
           </article>
@@ -777,7 +787,99 @@
                 design with easy navigation and responsive layout.
               </p>
               <a href="#webDesDev" class="button1" class="webDesign"
-                >View Design</a
+                >View Project Blueprint</a
+              >
+            </div>
+          </article>
+
+          <article class="prj-cards web-card">
+            <img
+              src="images/projects/websites/LMS.webp"
+              alt="2nd Year College Project - Library Management System"
+              data-pdf="images/projects/websites/LMS.pdf"
+              oncontextmenu="return false;"
+              draggable="false"
+            />
+            <div class="card__content">
+              <h3 class="card__title">DMCFI LMS</h3>
+              <p class="card__description">
+                My 2nd year college project, a library management System to help
+                the librarian to make managing of books much more efficient and
+                have clean records of borrowers. It also have activity track
+                record to check for malicious actions done within the system. Made with HTML,CSS,JS,PHP and MySQL. It also converted to Python language, with Flask.
+              </p>
+              <a href="#webDesDev" class="button1" class="webDesign"
+                >View Project Blueprint</a
+              >
+            </div>
+          </article>
+
+          <article class="prj-cards 4">
+            <img
+              src="images/projects/websites/DMCFI Website.webp"
+              alt="DMCIF Website"
+            />
+            <div class="card__content">
+              <h3 class="card__title">DMCFI Landing Page Website</h3>
+              <p class="card__description">
+                My 1st year college project, made entirely with Wordpress that shows the details for the landing page of the school DMCFI.
+                Responsive design to different devices screen.
+              </p>
+              <a
+                href="https://drive.google.com/file/d/1yoAtMYFWo5rNjxzi1C-aX1nFQMm-TgiA/view?usp=sharing"
+                target="_blank"
+                class="button1"
+                >View Video Presentation</a
+              >
+            </div>
+          </article>
+
+          <article class="prj-cards 4">
+            <img
+              src="images/projects/websites/JackEnPoy.webp"
+              alt="JackEnPoy Game"
+            />
+            <div class="card__content">
+              <h3 class="card__title">Jack En Poy Game</h3>
+              <p class="card__description">
+                A console-based Rock-Paper-Scissors game developed during my 2nd
+                year of college using C# and Visual Studio. This project
+                highlights basic programming concepts such as conditionals,
+                loops, and user input handling. It features a simple yet
+                interactive user experience where players compete against the
+                computer in multiple rounds.
+              </p>
+
+              <a
+                href="https://drive.google.com/file/d/1_LaAn4VRjMY7pUu0xTvuVajwH8C9WQUf/view?usp=drive_link"
+                target="_blank"
+                class="button1"
+                >View Video Presentation</a
+              >
+            </div>
+          </article>
+
+          <article class="prj-cards 4">
+            <img
+              src="images/projects/websites/GuessingGame.webp"
+              alt="Guessing Game"
+            />
+            <div class="card__content">
+              <h3 class="card__title">Guessing Game</h3>
+              <p class="card__description">
+                A number guessing game created as part of my 2nd year college
+                activity using C# and Visual Studio. This console-based
+                application challenges the player to guess a randomly generated
+                number within a limited number of attempts. It demonstrates
+                logic control, input validation, and user feedback through
+                simple yet effective console interactions.
+              </p>
+
+              <a
+                href="https://drive.google.com/file/d/1P-zgwZ6unywK7IKvltyspl1K8gFM7qVN/view?usp=drive_link"
+                target="_blank"
+                class="button1"
+                >View Video Presentation</a
               >
             </div>
           </article>
@@ -897,6 +999,7 @@
     <script src="js/enlargeImage.js"></script>
     <script src="js/scrollToTop.js"></script>
     <script src="js/closeModalOnOutside.js"></script>
+    <script src="js/swipeContainer.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 
