add things on skills

--- a/index.html
+++ b/index.html
@@ -469,6 +469,14 @@
               </div>
               <div>
                 <img
+                  src="images/Skills/vstudio.webp"
+                  alt="skills"
+                  id="skills-img"
+                />
+                <p>Visual Studio</p>
+              </div>
+              <div>
+                <img
                   src="images/Skills/xampp.webp"
                   alt="skills"
                   id="skills-img"
@@ -496,7 +504,7 @@
                   alt="skills"
                   id="skills-img"
                 />
-                <p>Collaboration</p>
+                <p>Collaboration/<br>Team-Player</p>
               </div>
               <div>
                 <img
@@ -521,6 +529,14 @@
                   id="skills-img"
                 />
                 <p>Detail-Oriented</p>
+              </div>
+              <div>
+                <img
+                  src="images/Skills/chat.webp"
+                  alt="skills"
+                  id="skills-img"
+                />
+                <p>Communication</p>
               </div>
             </div>
           </articles>
