--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
             <br />
             <ul class="custom-list">
+              <li>Academic Distinction Award</li>
               <li>Dean’s Lister (A.Y. 2021-2025)</li>
               <li>2nd place IT Quiz Bee (2025, 2024)</li>
               <li>Champion, Programming Wizard (2024)</li>
