adding aria hiddent

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header aria-hidden="true" tabindex="-1">
       <div class="logo" id="header">
-        <a href="#header" id="logo">E.M.P.</a>
+        <a href="#header" id="logo" aria-hidden="true">E.M.P.</a>
       </div>
 
       <nav>
@@ -25,11 +25,11 @@
           <span></span>
         </div>
         <ul class="nav-links">
-          <li><a href="#educ">Education</a></li>
-          <li><a href="#exp">Work Experience</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#educ"aria-hidden="true">Education</a></li>
+          <li><a href="#exp"aria-hidden="true">Work Experience</a></li>
+          <li><a href="#skills"aria-hidden="true">Skills</a></li>
+          <li><a href="#projects"aria-hidden="true">Projects</a></li>
+          <li><a href="#contact"aria-hidden="true">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -146,7 +146,7 @@
         </div>
 
         <br />
-        <button class="button1" id="certBtn" popovertarget="certificates">
+        <button class="button1" id="certBtn" popovertarget="certificates" aria-hidden="true">
           View School/Contest Certificates
         </button>
 
@@ -288,7 +288,7 @@
           </article>
         </div>
 
-        <button class="button1" id="workCertBtn" popovertarget="workCert">
+        <button class="button1" id="workCertBtn" popovertarget="workCert" aria-hidden="true">
           View Related Work Certificate
         </button>
 
