--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
     />
+    <meta name="description" content="Portfolio of Emmanuel Peralta">
 
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
     <title>Emmanuel Peralta | Portfolio</title>
