--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="Portfolio of Emmanuel Peralta">
 
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="assets/images/resume pic.webp" type="image/x-icon" />
     <title>Emmanuel Peralta | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
