add fix width and height for img

--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
             <div class="card__content">
               <h3 class="card__title">DMCFI LMS</h3>
               <p class="card__description">
-                My 2nd year college project, a library management System to help
+                My 2nd year college project, a library management system to help
                 the librarian to make managing of books much more efficient and
                 have clean records of borrowers. It also have activity track
                 record to check for malicious actions done within the system.
