add wordpress cert

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <br />
             <ul class="custom-list">
-              <li>Academic Distinction Award</li>
+              <li>Academic Distinction Award (GWA 1.29)</li>
               <li>Dean’s Lister (A.Y. 2021-2025)</li>
               <li>2nd place IT Quiz Bee (2025, 2024)</li>
               <li>Champion, Programming Wizard (2024)</li>
@@ -301,6 +301,8 @@
                 charts using Google Charts and dynamic SQL queries.
               </li>
             </ul>
+
+            
           </article>
         </div>
 
@@ -320,6 +322,14 @@
           </h3>
           <button id="closeWorkCertBtn" popovertarget="workCert">X</button>
           <img src="images/cert/COC.webp" alt="Certificate of Completion" />
+
+          <br>
+          <br>
+          <h2>Others:</h2>
+          <h3>
+            Wordpress Certificate (July 2025)
+          </h3>
+          <img src="images/cert/WordPress Certificate.webp" alt="Certificate of Completion" />
         </div>
       </section>
 
@@ -846,8 +856,7 @@
                 the librarian to make managing of books much more efficient and
                 have clean records of borrowers. It also have activity track
                 record to check for malicious actions done within the system.
-                Made with HTML,CSS,JS,PHP and MySQL. It also converted to Python
-                language, with Flask.
+                Made with HTML, CSS, JS, PHP and MySQL. It also converted to Python, with Flask.
               </p>
               <a href="#webDesDev" class="button1" class="webDesign"
                 >View Project Blueprint</a
