added teamview and photopea

--- a/index.html
+++ b/index.html
@@ -471,12 +471,21 @@
               </div>
               <div>
                 <img
+                  src="images/Skills/photopea.webp"
+                  alt="skills"
+                  id="skills-img"
+                />
+                <p>Photopea</p>
+              </div>
+              <div>
+                <img
                   src="images/Skills/capcut.webp"
                   alt="skills"
                   id="skills-img"
                 />
                 <p>Capcut</p>
               </div>
+              
             </div>
           </articles>
 
@@ -515,6 +524,14 @@
                   id="skills-img"
                 />
                 <p>XAMPP</p>
+              </div>
+              <div>
+                <img
+                  src="images/Skills/teamviewer.webp"
+                  alt="skills"
+                  id="skills-img"
+                />
+                <p>Teamviewer</p>
               </div>
             </div>
           </articles>
