--- a/index.html
+++ b/index.html
@@ -301,8 +301,6 @@
                 charts using Google Charts and dynamic SQL queries.
               </li>
             </ul>
-
-            
           </article>
         </div>
 
@@ -317,19 +315,39 @@
         </button>
 
         <div id="workCert" popover>
-          <h3>
-            On-the-Job Training(OJT) - Certificate of Completion (600 hours)
-          </h3>
           <button id="closeWorkCertBtn" popovertarget="workCert">X</button>
-          <img src="images/cert/COC.webp" alt="Certificate of Completion" />
 
-          <br>
-          <br>
+          <h2>Work Certificate(s)</h2><br>
+          <div class="workCertContainer">
+            <div>
+              <h3>
+                On-the-Job Training (600 hours) - Certificate of Completion
+              </h3>
+              <img src="images/cert/COC.webp" alt="Certificate of Completion" />
+            </div>
+          </div>
+
+          <br />
+          <br />
+          <hr />
           <h2>Others:</h2>
-          <h3>
-            Wordpress Certificate (July 2025)
-          </h3>
-          <img src="images/cert/WordPress Certificate.webp" alt="Certificate of Completion" />
+          <br />
+          <div class="workCertContainer">
+            <div>
+              <h3>Wordpress Certificate (via Coursera)</h3>
+              <img
+                src="images/cert/WordPress Certificate.webp"
+                alt="WordPress Certificate by Coursera"
+              />
+            </div>
+            <div>
+              <h3>Python Certificate (via Coursera)</h3>
+              <img
+                src="images/cert/Python Cert.webp"
+                alt="Python Certificate by Coursera"
+              />
+            </div>
+          </div>
         </div>
       </section>
 
@@ -485,7 +503,6 @@
                 />
                 <p>Capcut</p>
               </div>
-              
             </div>
           </articles>
 
@@ -873,7 +890,8 @@
                 the librarian to make managing of books much more efficient and
                 have clean records of borrowers. It also have activity track
                 record to check for malicious actions done within the system.
-                Made with HTML, CSS, JS, PHP and MySQL. It also converted to Python, with Flask.
+                Made with HTML, CSS, JS, PHP and MySQL. It also converted to
+                Python, with Flask.
               </p>
               <a href="#webDesDev" class="button1" class="webDesign"
                 >View Project Blueprint</a
