change the style of the cert containers, add canva cert

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 Here are some of the certificates I have earned during my
                 academic journey and participation in various contests.
               </p>
-              <hr />
+              <hr id="certHR" />
               <br />
               <h3>College</h3>
               <div>
@@ -215,7 +215,7 @@
                 <br />
               </div>
 
-              <hr />
+              <hr id="certHR" />
               <br />
               <h3>Secondary Education (SHS)</h3>
               <div>
@@ -239,9 +239,9 @@
                 <br />
               </div>
 
-              <hr />
+              <hr id="certHR" />
               <br />
-              <h3>Other</h3>
+              <h3>Others</h3>
               <div>
                 <img src="images/cert/College - Webinar.webp" alt="Webinar" />
                 <img src="images/cert/SHS-11-SubRecog.webp" alt="SubRecog" />
@@ -317,7 +317,8 @@
         <div id="workCert" popover>
           <button id="closeWorkCertBtn" popovertarget="workCert">X</button>
 
-          <h2>Work Certificate(s)</h2><br>
+          <h2>Work Certificate(s)</h2>
+          <br />
           <div class="workCertContainer">
             <div>
               <h3>
@@ -329,22 +330,30 @@
 
           <br />
           <br />
-          <hr />
-          <h2>Others:</h2>
+          <hr id="certHR" />
+          <br>
+          <h2>Others</h2>
           <br />
           <div class="workCertContainer">
             <div>
               <h3>Wordpress Certificate (via Coursera)</h3>
               <img
-                src="images/cert/WordPress Certificate.webp"
+                src="images/cert/cert WordPress.webp"
                 alt="WordPress Certificate by Coursera"
               />
             </div>
             <div>
               <h3>Python Certificate (via Coursera)</h3>
               <img
-                src="images/cert/Python Cert.webp"
+                src="images/cert/cert Python.webp"
                 alt="Python Certificate by Coursera"
+              />
+            </div>
+            <div>
+              <h3>Canva Certificate (via Coursera)</h3>
+              <img
+                src="images/cert/cert Canva.webp"
+                alt="Canva Certificate by Coursera"
               />
             </div>
           </div>
