add anchor tag to cert links, change style of cert containers

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           aria-hidden="true"
           tabindex="-1"
         >
-          View Related Work Certificate
+          View Related Certificates
         </button>
 
         <div id="workCert" popover>
@@ -324,37 +324,54 @@
               <h3>
                 On-the-Job Training (600 hours) - Certificate of Completion
               </h3>
-              <img src="images/cert/COC.webp" alt="Certificate of Completion" />
+              <a
+                href="https://www.facebook.com/share/p/1CpFoQNmba/"
+                target="_blank"
+                ><img
+                  src="images/cert/COC.webp"
+                  alt="Certificate of Completion"
+              /></a>
             </div>
           </div>
 
           <br />
           <br />
           <hr id="certHR" />
-          <br>
+          <br />
           <h2>Others</h2>
           <br />
           <div class="workCertContainer">
             <div>
               <h3>Wordpress Certificate (via Coursera)</h3>
-              <img
-                src="images/cert/cert WordPress.webp"
-                alt="WordPress Certificate by Coursera"
-              />
+
+              <a
+                href="https://www.coursera.org/account/accomplishments/verify/LUBBBLES6FQQ"
+                target="_blank"
+                ><img
+                  src="images/cert/cert WordPress.webp"
+                  alt="WordPress Certificate by Coursera"
+              /></a>
             </div>
             <div>
               <h3>Python Certificate (via Coursera)</h3>
-              <img
-                src="images/cert/cert Python.webp"
-                alt="Python Certificate by Coursera"
-              />
+
+              <a
+                href="https://www.coursera.org/account/accomplishments/verify/QH7JBIG9EWVL"
+                target="_blank"
+                ><img
+                  src="images/cert/cert Python.webp"
+                  alt="Python Certificate by Coursera"
+              /></a>
             </div>
             <div>
               <h3>Canva Certificate (via Coursera)</h3>
-              <img
-                src="images/cert/cert Canva.webp"
-                alt="Canva Certificate by Coursera"
-              />
+              <a
+                href="https://www.coursera.org/account/accomplishments/verify/CUANW08KLUKE"
+                target="_blank"
+                ><img
+                  src="images/cert/cert Canva.webp"
+                  alt="Canva Certificate by Coursera"
+              /></a>
             </div>
           </div>
         </div>
