--- a/index.html
+++ b/index.html
@@ -373,6 +373,16 @@
                   alt="Canva Certificate by Coursera"
               /></a>
             </div>
+            <div>
+              <h3>Canva Certificate 2 (via Coursera)</h3>
+              <a
+                href="https://www.coursera.org/account/accomplishments/certificate/EZI8OINDQN51"
+                target="_blank"
+                ><img
+                  src="images/cert/cert Canva2.webp"
+                  alt="Canva Certificate 2 by Coursera"
+              /></a>
+            </div>
           </div>
         </div>
       </section>
